# yamada-chromonix

./: README.md  pyproject.toml
src/: config.py  create.py  input_generator.py  palette_generator.py
