[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yamada-chromonix"
dynamic = ["version"]
description = 'recommend color palette in word vector'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "quantumshiro", email = "hiro.1nakanishi@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/quantumshiro/yamada-chromonix#readme"
Issues = "https://github.com/quantumshiro/yamada-chromonix/issues"
Source = "https://github.com/quantumshiro/yamada-chromonix"

[tool.hatch.version]
path = "src/yamada_chromonix/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/yamada_chromonix tests}"

[tool.coverage.run]
source_pkgs = ["yamada_chromonix", "tests"]
branch = true
parallel = true
omit = [
  "src/yamada_chromonix/__about__.py",
]

[tool.coverage.paths]
yamada_chromonix = ["src/yamada_chromonix", "*/yamada-chromonix/src/yamada_chromonix"]
tests = ["tests", "*/yamada-chromonix/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
